--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,8 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
+        "composite": true
     },
     "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
