--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "vocabulary-quiz",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "pinia": "^3.0.3",
-    "tailwindcss": "^4.1.11",
-    "vue": "^3.5.17",
-    "vue-router": "4"
-  },
-  "devDependencies": {
-    "@types/node": "^24.1.0",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.8.3",
-    "unplugin-vue-components": "^28.8.0",
-    "vite": "^7.0.4",
-    "vue-tsc": "^2.2.12"
-  }
+    "name": "vocabulary-quiz",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite --host",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.11",
+        "pinia": "^3.0.3",
+        "tailwindcss": "^4.1.11",
+        "vue": "^3.5.17",
+        "vue-router": "4"
+    },
+    "devDependencies": {
+        "@types/node": "^24.1.0",
+        "@vitejs/plugin-vue": "^6.0.0",
+        "@vue/tsconfig": "^0.7.0",
+        "typescript": "~5.8.3",
+        "unplugin-vue-components": "^28.8.0",
+        "vite": "^7.0.4",
+        "vue-tsc": "^2.2.12"
+    }
 }
