--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@primeuix/themes": "^1.2.3",
         "@tailwindcss/vite": "^4.1.11",
         "pinia": "^3.0.3",
+        "primevue": "^4.3.7",
         "tailwindcss": "^4.1.11",
         "vue": "^3.5.17",
+        "vue-final-modal": "^4.5.5",
         "vue-router": "4"
     },
     "devDependencies": {
